test/types/records/init/init-post-postinit.bad
R.postinit() x: 0
R.postinit() x: 1
R.postinit() x: 0
